<resources>
    <string name="app_name">AcademParty</string>
    <string name="create_button">Создать</string>
    <string name="party_name">Название:</string>
    <string name="party_place">Место:</string>
    <string name="party_time">Время:</string>
    <string name="party_manager">Организатор:</string>
    <string name="party_members">Участники</string>
    <string name="Description">Описание</string>
    <string name="separator">\\</string>
    <string name="Change">Изменить</string>
    <string name="Delete">Удалить</string>
    <string name="MaxMembersNumber">Максимальное кол-во участников</string>
    <string name="Edit">Редактировать</string>
    <string name="URL">URL изображения</string>

    <string-array name="sorting_parties">
        <item>Ближайшие события</item>
        <item>Наиболее поздние события</item>
        <item>Больше участников</item>
        <item>Меньше участников</item>
    </string-array>
</resources>