<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/Scrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

        <RelativeLayout
            android:id="@+id/RLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/name_edition_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="16dp"

                android:layout_marginTop="16dp"

                android:orientation="horizontal"

                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/party_name" />

                <EditText
                    android:id="@+id/party_edit_name_editor"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/place_edition_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/name_edition_layout"
                android:layout_marginTop="8dp"

                android:layout_marginStart="16dp"

                android:orientation="horizontal"

                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/party_place" />

                <EditText
                    android:id="@+id/party_edit_place_editor"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/time_edition_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/place_edition_layout"
                android:layout_marginTop="8dp"

                android:layout_marginStart="16dp"

                android:orientation="horizontal"

                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/party_time" />

                <EditText
                    android:id="@+id/party_edit_time_editor"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="date" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/manager_edition_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/time_edition_layout"
                android:layout_marginTop="8dp"

                android:layout_marginStart="16dp"

                android:orientation="horizontal"

                android:gravity="center_vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/party_manager" />

                <EditText
                    android:id="@+id/party_edit_manager_editor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/max_participants_edition_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/manager_edition_layout"
                android:layout_marginTop="8dp"

                android:layout_marginStart="16dp"

                android:orientation="horizontal"

                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/MaxMembersNumber" />

                <EditText
                    android:id="@+id/party_edit_max_participants_editor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/description_edition_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/max_participants_edition_layout"
                android:layout_marginTop="16dp"

                android:layout_marginStart="16dp"

                android:orientation="vertical"

                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="@string/Description" />

                <EditText
                    android:id="@+id/party_edit_description_editor"

                    android:layout_width="match_parent"
                    android:layout_height="100dp" />

            </LinearLayout>

            <Button
                android:id="@+id/create_create_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/description_edition_layout"
                android:layout_marginTop="16dp"

                android:gravity="center"

                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorAccent"

                android:text="@string/Change" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>